style.css
body {
  background-color: rgb(253, 251, 251);
  padding-top: 135px;
  margin: 0px;
}

#cabecalho {
  width: 100%;
  position: fixed;
  top: 0px;
  background-color: #c5c5c5;
  box-shadow: 0px 3px 8px #333;
}

#cabecalho {
  text-align: center;
}

nav ul {
  list-style: none;
  margin: 25px;
}

nav ul li {
  display: inline;
}

img {
    max-width: 100%;
}

.img_principal {
  width: 450px;
  margin: 20px auto;
}

#minha_foto {
  width: 450px;
  margin: auto;
}

#licoes_aprendidas, #licoes_a_aprender {
  display: inline-block;
}

article {
  margin: 10px;
  padding: 25px;
}

p {
  font-family: Arial, Helvetica, sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 17px;
}

table {
  border: 1px solid #333;
}

.lado-esquerdo {
  width: 875px;
  display: inline-block;
  background-color: #cfcfdd;
  padding: 30px;
}

.lado-direito {
  width: 344px;
  display: inline-block;
  vertical-align: top;
  padding: 30px;
  background-color: #cfcfdd;
}

.tabela_informacoes, #licoes_aprendidas, #licoes_a_aprender {
  margin-left: 35px;
}

